--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,6 +20,18 @@ ja:
         unauthenticated: "アカウント登録もしくはログインしてください。"
         invalid: "メールアドレスもしくはパスワードが不正です。"
         not_found_in_database: "メールアドレスもしくはパスワードが不正です。"
+    sessions:
+      admin_store:
+        signed_in: "ログインに成功しました。"
+        signed_out: "ログアウトに成功しました。"
+    registrations:
+      customer:
+        signed_up: "アカウント登録が完了しました。"
+    failure:
+      admin_store:
+        unauthenticated: "アカウント登録もしくはログインしてください。"
+        invalid: "メールアドレスもしくはパスワードが不正です。"
+        not_found_in_database: "メールアドレスもしくはパスワードが不正です。"
   activerecord:
     attributes:
       customer:
