--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -23,6 +23,7 @@ ja:
         unauthenticated: "アカウント登録もしくはログインしてください。"
         invalid: "メールアドレスもしくはパスワードが不正です。"
         not_found_in_database: "メールアドレスもしくはパスワードが不正です。"
+        already_authenticated: "すでにログインしています。"
       customer:
         unauthenticated: "アカウント登録もしくはログインしてください。"
         invalid: "メールアドレスもしくはパスワードが不正です。"
